--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,7 +9,11 @@
 name: Upload Python Package
 
 on:
-  release:
+ push:
+    branches: [ main ]
+ pull_request:
+    branches: [ main ]
+ release:
     types: [published]
 
 permissions:
@@ -18,7 +22,7 @@ permissions:
 jobs:
   deploy:
 
-    runs-on: windows
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
