--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,7 +22,7 @@ permissions:
 jobs:
   deploy:
 
-    runs-on: windows-latest
+    runs-on: [ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v3
