--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -39,5 +39,5 @@ jobs:
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
-        user: maxpat78
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        user: __token__
+        password: ${{ secrets.pypi_api_token }}
