--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,11 +14,15 @@ on:
 
 permissions:
   contents: read
+  id-token: write
 
 jobs:
   deploy:
 
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/FATtools
 
     steps:
     - uses: actions/checkout@v3
@@ -34,4 +38,3 @@ jobs:
       run: python -m build
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1
-      url: https://pypi.org/p/FATtools
