--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,11 @@ classifiers = [
     'Intended Audience :: Developers',
     'Intended Audience :: System Administrators',
     'Environment :: Win32 (MS Windows)',
+    'Environment :: MacOS X',
     'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
     'Operating System :: Microsoft :: Windows',
     'Operating System :: POSIX :: Linux',
+    'Operating System :: MacOS :: MacOS X',
     'Topic :: System :: Filesystems'
 ]
 dependencies = ["hexdump"]
