MBR asm code fixed
- DAP is moved after code
- DL register is explicitly set with drive 80h (first HDD) to satisfy some BIOSes, mostly Phoenix
- an optional disk reset is issued after int 13:42h

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,10 @@ $RECYCLE.BIN/
 # =========================
 # Operating System Files
 # =========================
-BUGS.TXT
 
 # PyPI related
 FATtools.egg-info/
 dist/
+
+BUGS.TXT
+IDEAS.TXT
